bug 139524 - handle style of col's with spans. sr=kin, r=bernd